// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameService add player returns valid player 1`] = `
Object {
  "deck": Array [],
  "id": Any<String>,
  "isAI": false,
  "isActive": false,
  "isHost": false,
  "nickname": "foo",
  "points": 0,
  "token": Any<String>,
}
`;

exports[`GameService builds pile works 1`] = `
Object {
  "discardedPrompts": Array [],
  "discardedResponses": Array [],
  "prompts": Any<Array>,
  "responses": Any<Array>,
}
`;

exports[`GameService create / join game creates empty game 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": false,
    "id": Any<String>,
    "packs": Array [],
    "specialRules": Object {
      "aiPlayerCount": 0,
    },
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [],
  "rounds": Array [],
}
`;

exports[`GameService create / join game creates game with two packs and password 1`] = `
Object {
  "game": Object {
    "handSize": 10,
    "hasPassword": true,
    "id": Any<String>,
    "packs": Array [
      Object {
        "abbr": "10",
        "name": "CAH Base Set",
        "official": true,
      },
      Object {
        "abbr": "1",
        "name": "Cards Against/For South Africa",
        "official": false,
      },
    ],
    "password": Any<String>,
    "specialRules": Object {
      "aiPlayerCount": 0,
    },
    "status": "created",
    "timeouts": Object {
      "betweenRounds": 30,
      "judging": 120,
      "playing": 120,
      "revealing": 60,
    },
    "winnerPoints": 20,
  },
  "players": Array [],
  "rounds": Array [],
}
`;

exports[`GameService create / join game rejects invalid packs 1`] = `[AssertionError: Invalid pack undefined.]`;

exports[`GameService create / join game rejects invalid packs 2`] = `[AssertionError: Invalid pack foooooo.]`;

exports[`GameService static information lists available packs 1`] = `
Array [
  Object {
    "abbr": "10",
    "name": "CAH Base Set",
    "official": true,
    "promptsCount": 282,
    "responsesCount": 1275,
  },
  Object {
    "abbr": "96",
    "name": "CAH: Family Edition (Free Print & Play Public Beta)",
    "official": true,
    "promptsCount": 68,
    "responsesCount": 347,
  },
  Object {
    "abbr": "198",
    "name": "CAH: Procedurally-Generated Cards",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 288,
  },
  Object {
    "abbr": "76",
    "name": "CAH: Red Box Expansion",
    "official": true,
    "promptsCount": 73,
    "responsesCount": 283,
  },
  Object {
    "abbr": "144",
    "name": "Absurd Box Expansion",
    "official": true,
    "promptsCount": 45,
    "responsesCount": 257,
  },
  Object {
    "abbr": "23",
    "name": "CAH: Green Box Expansion",
    "official": true,
    "promptsCount": 56,
    "responsesCount": 249,
  },
  Object {
    "abbr": "67",
    "name": "CAH: Blue Box Expansion",
    "official": true,
    "promptsCount": 81,
    "responsesCount": 240,
  },
  Object {
    "abbr": "151",
    "name": "CAH: First Expansion",
    "official": true,
    "promptsCount": 28,
    "responsesCount": 112,
  },
  Object {
    "abbr": "194",
    "name": "PAX Prime 2014 Custom Printed Cards",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 105,
  },
  Object {
    "abbr": "75",
    "name": "CAH: Second Expansion",
    "official": true,
    "promptsCount": 28,
    "responsesCount": 84,
  },
  Object {
    "abbr": "153",
    "name": "CAH: Fifth Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 78,
  },
  Object {
    "abbr": "107",
    "name": "CAH: Third Expansion",
    "official": true,
    "promptsCount": 25,
    "responsesCount": 77,
  },
  Object {
    "abbr": "122",
    "name": "CAH: Sixth Expansion",
    "official": true,
    "promptsCount": 26,
    "responsesCount": 77,
  },
  Object {
    "abbr": "91",
    "name": "CAH: UK Conversion Kit",
    "official": true,
    "promptsCount": 20,
    "responsesCount": 74,
  },
  Object {
    "abbr": "68",
    "name": "CAH: Fourth Expansion",
    "official": true,
    "promptsCount": 31,
    "responsesCount": 71,
  },
  Object {
    "abbr": "105",
    "name": "PAX Prime 2013",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 37,
  },
  Object {
    "abbr": "168",
    "name": "CAH: Main Deck",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 34,
  },
  Object {
    "abbr": "200",
    "name": "CAH: A.I. Pack",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 30,
  },
  Object {
    "abbr": "175",
    "name": "CAH: Human Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 28,
  },
  Object {
    "abbr": "118",
    "name": "Theatre Pack - CATS Musical Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 27,
  },
  Object {
    "abbr": "190",
    "name": "CAH: Ass Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 27,
  },
  Object {
    "abbr": "121",
    "name": "Cards Against Humanity Saves America Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 26,
  },
  Object {
    "abbr": "152",
    "name": "Fantasy Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 26,
  },
  Object {
    "abbr": "114",
    "name": "CAH: 2000s Nostalgia Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 25,
  },
  Object {
    "abbr": "131",
    "name": "Jew Pack/Chosen People Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 25,
  },
  Object {
    "abbr": "148",
    "name": "Theatre Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 25,
  },
  Object {
    "abbr": "162",
    "name": "90s Nostalgia Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 25,
  },
  Object {
    "abbr": "179",
    "name": "Weed Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 25,
  },
  Object {
    "abbr": "180",
    "name": "Pride Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 25,
  },
  Object {
    "abbr": "62",
    "name": "Geek Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "127",
    "name": "2014 Holiday Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 24,
  },
  Object {
    "abbr": "146",
    "name": "CAH: College Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "150",
    "name": "Reject Pack 2",
    "official": true,
    "promptsCount": 10,
    "responsesCount": 24,
  },
  Object {
    "abbr": "157",
    "name": "Food Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "167",
    "name": "Period Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "171",
    "name": "Dad Pack",
    "official": true,
    "promptsCount": 6,
    "responsesCount": 24,
  },
  Object {
    "abbr": "128",
    "name": "Science Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "139",
    "name": "2012 Holiday Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "145",
    "name": "CAH: Canadian Conversion Kit",
    "official": true,
    "promptsCount": 8,
    "responsesCount": 23,
  },
  Object {
    "abbr": "164",
    "name": "Reject Pack 3",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 23,
  },
  Object {
    "abbr": "165",
    "name": "Seasons Greetings Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "172",
    "name": "Sci-Fi Pack",
    "official": true,
    "promptsCount": 7,
    "responsesCount": 23,
  },
  Object {
    "abbr": "197",
    "name": "CAH: Box Expansion",
    "official": true,
    "promptsCount": 0,
    "responsesCount": 23,
  },
  Object {
    "abbr": "63",
    "name": "PAX East 2014",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 22,
  },
  Object {
    "abbr": "177",
    "name": "Trump Bug Out Bag/Post-Trump Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 22,
  },
  Object {
    "abbr": "160",
    "name": "2013 Holiday Pack",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 21,
  },
  Object {
    "abbr": "176",
    "name": "World Wide Web Pack",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 21,
  },
  Object {
    "abbr": "173",
    "name": "Desert Bus For Hope Pack",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 19,
  },
  Object {
    "abbr": "193",
    "name": "Retail Product Pack",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 19,
  },
  Object {
    "abbr": "129",
    "name": "House of Cards Pack",
    "official": true,
    "promptsCount": 9,
    "responsesCount": 16,
  },
  Object {
    "abbr": "183",
    "name": "Reject Pack",
    "official": true,
    "promptsCount": 8,
    "responsesCount": 16,
  },
  Object {
    "abbr": "192",
    "name": "Gen Con 2018 Midterm Election Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 16,
  },
  Object {
    "abbr": "161",
    "name": "Fascism Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 15,
  },
  Object {
    "abbr": "130",
    "name": "Vote For Trump Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 12,
  },
  Object {
    "abbr": "155",
    "name": "Vote For Hillary Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 12,
  },
  Object {
    "abbr": "159",
    "name": "TableTop Pack",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 12,
  },
  Object {
    "abbr": "170",
    "name": "Mass Effect Pack",
    "official": true,
    "promptsCount": 4,
    "responsesCount": 10,
  },
  Object {
    "abbr": "184",
    "name": "ClickHole Greeting Cards Pack (Target Exclusive)",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 10,
  },
  Object {
    "abbr": "106",
    "name": "PAX 2010 \\"Oops\\" Kit",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 9,
  },
  Object {
    "abbr": "174",
    "name": "Nerd Bundle: A Few More Cards For You Nerds (Target Exclusive)",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 9,
  },
  Object {
    "abbr": "72",
    "name": "PAX East 2014 - Panel Cards",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "133",
    "name": "PAX East 2013 Promo Pack B",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "158",
    "name": "PAX Prime 2015 Food Pack B (Coconut)",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "181",
    "name": "PAX Prime 2015 Food Pack C (Cherry)",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "188",
    "name": "PAX East 2013 Promo Pack C",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "191",
    "name": "PAX Prime 2015 Food Pack A (Mango)",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 8,
  },
  Object {
    "abbr": "186",
    "name": "CAH: Hidden Gems Bundle: A Few New Cards We Crammed Into This Bundle Pack (Amazon Exclusive)",
    "official": true,
    "promptsCount": 3,
    "responsesCount": 7,
  },
  Object {
    "abbr": "195",
    "name": "Jack White Show Pack",
    "official": true,
    "promptsCount": 1,
    "responsesCount": 6,
  },
  Object {
    "abbr": "166",
    "name": "PAX Prime 2014 - Panel Cards",
    "official": true,
    "promptsCount": 5,
    "responsesCount": 5,
  },
  Object {
    "abbr": "187",
    "name": "Retail Mini Pack",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 3,
  },
  Object {
    "abbr": "189",
    "name": "PAX East 2013 Promo Pack A",
    "official": true,
    "promptsCount": 2,
    "responsesCount": 0,
  },
  Object {
    "abbr": "0",
    "name": "Hilarious!",
    "official": false,
    "promptsCount": 130,
    "responsesCount": 540,
  },
  Object {
    "abbr": "79",
    "name": "Skewered And Roasted",
    "official": false,
    "promptsCount": 101,
    "responsesCount": 480,
  },
  Object {
    "abbr": "43",
    "name": "WTF Did You Say?!?",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 476,
  },
  Object {
    "abbr": "22",
    "name": "Conspiracy Theory",
    "official": false,
    "promptsCount": 70,
    "responsesCount": 468,
  },
  Object {
    "abbr": "112",
    "name": "Trumped UpCards: The World's Biggest Deck*",
    "official": false,
    "promptsCount": 90,
    "responsesCount": 459,
  },
  Object {
    "abbr": "17",
    "name": "Rotten Apples: The Tasteless Adult Party Game",
    "official": false,
    "promptsCount": 130,
    "responsesCount": 454,
  },
  Object {
    "abbr": "83",
    "name": "Bad Campaign, The Presidential Party Game!",
    "official": false,
    "promptsCount": 90,
    "responsesCount": 450,
  },
  Object {
    "abbr": "143",
    "name": "Depravity",
    "official": false,
    "promptsCount": 99,
    "responsesCount": 432,
  },
  Object {
    "abbr": "50",
    "name": "Cards Against Profanity",
    "official": false,
    "promptsCount": 77,
    "responsesCount": 425,
  },
  Object {
    "abbr": "41",
    "name": "The Catholic Card Game: Base Deck",
    "official": false,
    "promptsCount": 81,
    "responsesCount": 400,
  },
  Object {
    "abbr": "138",
    "name": "That's What She Said Game",
    "official": false,
    "promptsCount": 58,
    "responsesCount": 400,
  },
  Object {
    "abbr": "33",
    "name": "Evil Apples",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 399,
  },
  Object {
    "abbr": "38",
    "name": "Kiwis Versus Morality",
    "official": false,
    "promptsCount": 95,
    "responsesCount": 393,
  },
  Object {
    "abbr": "29",
    "name": "Dick",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 375,
  },
  Object {
    "abbr": "61",
    "name": "Bards Dispense Profanity",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 375,
  },
  Object {
    "abbr": "1",
    "name": "Cards Against/For South Africa",
    "official": false,
    "promptsCount": 108,
    "responsesCount": 360,
  },
  Object {
    "abbr": "18",
    "name": "The Game Without Decency",
    "official": false,
    "promptsCount": 150,
    "responsesCount": 359,
  },
  Object {
    "abbr": "64",
    "name": "Cads Against Adulting",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 350,
  },
  Object {
    "abbr": "124",
    "name": "Kids Create Absurdity",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 350,
  },
  Object {
    "abbr": "84",
    "name": "Not Parent Approved",
    "official": false,
    "promptsCount": 100,
    "responsesCount": 340,
  },
  Object {
    "abbr": "20",
    "name": "KinderPerfect (Commercial Set)",
    "official": false,
    "promptsCount": 70,
    "responsesCount": 324,
  },
  Object {
    "abbr": "80",
    "name": "Cads About Matrimony Poly Pack",
    "official": false,
    "promptsCount": 83,
    "responsesCount": 320,
  },
  Object {
    "abbr": "19",
    "name": "Disgruntled Decks: Navy Edition",
    "official": false,
    "promptsCount": 90,
    "responsesCount": 305,
  },
  Object {
    "abbr": "55",
    "name": "Disgruntled Decks: Air Force Edition",
    "official": false,
    "promptsCount": 90,
    "responsesCount": 305,
  },
  Object {
    "abbr": "95",
    "name": "Disgruntled Decks: Army Edition",
    "official": false,
    "promptsCount": 90,
    "responsesCount": 305,
  },
  Object {
    "abbr": "2",
    "name": "Dirty Nasty Filthy",
    "official": false,
    "promptsCount": 142,
    "responsesCount": 303,
  },
  Object {
    "abbr": "21",
    "name": "Disgruntled Decks: Marine Corps/Jarhead Edition",
    "official": false,
    "promptsCount": 88,
    "responsesCount": 303,
  },
  Object {
    "abbr": "125",
    "name": "Kiwis Against Morality",
    "official": false,
    "promptsCount": 50,
    "responsesCount": 298,
  },
  Object {
    "abbr": "14",
    "name": "Personally Incorrect",
    "official": false,
    "promptsCount": 98,
    "responsesCount": 291,
  },
  Object {
    "abbr": "8",
    "name": "Kids Against Maturity",
    "official": false,
    "promptsCount": 151,
    "responsesCount": 272,
  },
  Object {
    "abbr": "99",
    "name": "Fun in the Oven",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 259,
  },
  Object {
    "abbr": "89",
    "name": "Cads About Matrimony",
    "official": false,
    "promptsCount": 55,
    "responsesCount": 231,
  },
  Object {
    "abbr": "85",
    "name": "Charlie Foxtrot",
    "official": false,
    "promptsCount": 65,
    "responsesCount": 205,
  },
  Object {
    "abbr": "82",
    "name": "Humanity Hates Trump: Base Set",
    "official": false,
    "promptsCount": 50,
    "responsesCount": 200,
  },
  Object {
    "abbr": "73",
    "name": "Cards About Toronto",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 198,
  },
  Object {
    "abbr": "87",
    "name": "2016 Election Game",
    "official": false,
    "promptsCount": 50,
    "responsesCount": 198,
  },
  Object {
    "abbr": "9",
    "name": "Babies vs. Parents",
    "official": false,
    "promptsCount": 80,
    "responsesCount": 186,
  },
  Object {
    "abbr": "46",
    "name": "The Catholic Card Game: Five Deck Expansion Pack",
    "official": false,
    "promptsCount": 41,
    "responsesCount": 174,
  },
  Object {
    "abbr": "42",
    "name": "KinderPerfect: A Timeout For Parents (Kickstarter Set)",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 172,
  },
  Object {
    "abbr": "57",
    "name": "JadedAid: A Card Game to Save Humanitarians",
    "official": false,
    "promptsCount": 35,
    "responsesCount": 159,
  },
  Object {
    "abbr": "74",
    "name": "Cads About Maternity - A game for bad mommies",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 155,
  },
  Object {
    "abbr": "54",
    "name": "Cats Abiding Horribly: Episode I - The Dirty Goblin",
    "official": false,
    "promptsCount": 65,
    "responsesCount": 140,
  },
  Object {
    "abbr": "132",
    "name": "Carps & Angsty Manatee - Volume 1",
    "official": false,
    "promptsCount": 20,
    "responsesCount": 130,
  },
  Object {
    "abbr": "71",
    "name": "Carps & Angsty Manatee - Volume 2",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 126,
  },
  Object {
    "abbr": "5",
    "name": "Cows Grilling Hamburgers - Patty Pack #1",
    "official": false,
    "promptsCount": 42,
    "responsesCount": 125,
  },
  Object {
    "abbr": "104",
    "name": "Carps & Angsty Manatee - Texas Edition",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 124,
  },
  Object {
    "abbr": "32",
    "name": "Clones Attack Hilarity #1",
    "official": false,
    "promptsCount": 38,
    "responsesCount": 112,
  },
  Object {
    "abbr": "7",
    "name": "Clones Attack Hilarity #2",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 110,
  },
  Object {
    "abbr": "26",
    "name": "Cards for the Masses",
    "official": false,
    "promptsCount": 110,
    "responsesCount": 110,
  },
  Object {
    "abbr": "28",
    "name": "Disgruntled Decks: Coast Guard/Coastie Edition",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 110,
  },
  Object {
    "abbr": "65",
    "name": "Cats Abiding Horribly: Episode II - A New Low",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 110,
  },
  Object {
    "abbr": "137",
    "name": "Cats Abiding Horribly: Episode III - The SJWs Strike Back",
    "official": false,
    "promptsCount": 40,
    "responsesCount": 110,
  },
  Object {
    "abbr": "140",
    "name": "Potheads Against Sanity",
    "official": false,
    "promptsCount": 96,
    "responsesCount": 103,
  },
  Object {
    "abbr": "34",
    "name": "Cocks Abreast Hostility: Cock Pack One: Just The Tip",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 100,
  },
  Object {
    "abbr": "56",
    "name": "Cocks Abreast Hostility - Cock Pack Two: Fowls Deep",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 100,
  },
  Object {
    "abbr": "15",
    "name": "Personally Incorrect - Expansion [Red Box]",
    "official": false,
    "promptsCount": 29,
    "responsesCount": 96,
  },
  Object {
    "abbr": "13",
    "name": "Cards and Punishment Vol. One",
    "official": false,
    "promptsCount": 39,
    "responsesCount": 94,
  },
  Object {
    "abbr": "108",
    "name": "Crabs Adjust Humidity: Volume 2",
    "official": false,
    "promptsCount": 33,
    "responsesCount": 93,
  },
  Object {
    "abbr": "134",
    "name": "Carbs of the Huge Manatee - Online Dating Expansion 1",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 93,
  },
  Object {
    "abbr": "52",
    "name": "Carbs of the Huge Manatee: General Expansion 1",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 92,
  },
  Object {
    "abbr": "123",
    "name": "Carbs of the Huge Manatee - Kink Expansion 1",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 92,
  },
  Object {
    "abbr": "16",
    "name": "Personally Incorrect - Expansion 2 [Yellow Box]",
    "official": false,
    "promptsCount": 35,
    "responsesCount": 90,
  },
  Object {
    "abbr": "69",
    "name": "Guards Against Insanity, Edition 3",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 90,
  },
  Object {
    "abbr": "90",
    "name": "Carbs of the Huge Manatee: General Expansion 3",
    "official": false,
    "promptsCount": 18,
    "responsesCount": 90,
  },
  Object {
    "abbr": "92",
    "name": "Carbs of the Huge Manatee: General Expansion 2",
    "official": false,
    "promptsCount": 18,
    "responsesCount": 90,
  },
  Object {
    "abbr": "97",
    "name": "Guards Against Insanity, Edition 2",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 90,
  },
  Object {
    "abbr": "110",
    "name": "Guards Against Insanity, Edition 4",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 90,
  },
  Object {
    "abbr": "117",
    "name": "Guards Against Insanity, Edition 5",
    "official": false,
    "promptsCount": 22,
    "responsesCount": 90,
  },
  Object {
    "abbr": "126",
    "name": "Bad Hombres Against Fake News Pack 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 90,
  },
  Object {
    "abbr": "156",
    "name": "Carbs of the Huge Manatee: Dance Expansion 1",
    "official": false,
    "promptsCount": 18,
    "responsesCount": 90,
  },
  Object {
    "abbr": "169",
    "name": "The Worst Card Game: 2016 National Edition",
    "official": false,
    "promptsCount": 18,
    "responsesCount": 89,
  },
  Object {
    "abbr": "109",
    "name": "Crabs Adjust Humidity: Volume 1",
    "official": false,
    "promptsCount": 33,
    "responsesCount": 87,
  },
  Object {
    "abbr": "81",
    "name": "Cads About Matrimony: Expansion 1",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 85,
  },
  Object {
    "abbr": "101",
    "name": "Crabs Adjust Humidity: Volume 3",
    "official": false,
    "promptsCount": 34,
    "responsesCount": 83,
  },
  Object {
    "abbr": "4",
    "name": "Cows Against Hamburgers - Patty Pack #1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "6",
    "name": "Crazy & Horrible Rabbit - Vol. 1",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 80,
  },
  Object {
    "abbr": "24",
    "name": "Words Against Morality: Volume 3",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "27",
    "name": "Words Against Morality: Volume 4",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "31",
    "name": "Crows Adopt Vulgarity, Vol. 4",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "35",
    "name": "Words Against Morality: Volume 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "36",
    "name": "Crows Adopt Vulgarity, Vol. 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "37",
    "name": "Words Against Morality: Volume 2",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "45",
    "name": "Crows Adopt Vulgarity, Vol. 2",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "47",
    "name": "Cakes Athirst Hilarity Volume 2",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "49",
    "name": "Cakes Athirst Hilarity Volume 4",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "51",
    "name": "Crabs Adjust Humidity: Volume 5",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 80,
  },
  Object {
    "abbr": "53",
    "name": "Cakes Athirst Hilarity Volume 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "58",
    "name": "Cakes Athirst Hilarity Volume 3",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "59",
    "name": "Humanity Hates the Holidays \\"Love\\" Edition",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "66",
    "name": "Crows Adopt Vulgarity, Vol. 3",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "86",
    "name": "Humanity Hates Trump: Expansion Pack 2 - Humanity Hates Hillary, Too",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "88",
    "name": "Humanity Hates Trump: Expansion Pack 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "93",
    "name": "Humanity Hates The Holidays",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 80,
  },
  Object {
    "abbr": "98",
    "name": "Crabs Adjust Humidity: Volume 7",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 80,
  },
  Object {
    "abbr": "103",
    "name": "Crabs Adjust Humidity: Volume 4",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 80,
  },
  Object {
    "abbr": "111",
    "name": "Crabs Adjust Humidity: Volume 6",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 80,
  },
  Object {
    "abbr": "119",
    "name": "Guards Against Insanity, Edition 1",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 80,
  },
  Object {
    "abbr": "120",
    "name": "Pigs Against Profanity: Volume 1",
    "official": false,
    "promptsCount": 31,
    "responsesCount": 80,
  },
  Object {
    "abbr": "77",
    "name": "Pigs Against Profanity: Volume 3",
    "official": false,
    "promptsCount": 32,
    "responsesCount": 79,
  },
  Object {
    "abbr": "78",
    "name": "Pigs Against Profanity: Volume 2",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 79,
  },
  Object {
    "abbr": "3",
    "name": "Clams Attempt Harmonica, Volume 1",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 78,
  },
  Object {
    "abbr": "116",
    "name": "Cards and Punishment Vol. Two",
    "official": false,
    "promptsCount": 33,
    "responsesCount": 77,
  },
  Object {
    "abbr": "39",
    "name": "KinderPerfect: More Expansion Pack",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "44",
    "name": "KinderPerfect: Naughty Expansion Pack",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "60",
    "name": "KinderPerfect: Tween Expansion Pack",
    "official": false,
    "promptsCount": 24,
    "responsesCount": 75,
  },
  Object {
    "abbr": "149",
    "name": "Cards With No Sexuality",
    "official": false,
    "promptsCount": 25,
    "responsesCount": 75,
  },
  Object {
    "abbr": "11",
    "name": "The Worst Card Game: Colorado Edition",
    "official": false,
    "promptsCount": 36,
    "responsesCount": 72,
  },
  Object {
    "abbr": "141",
    "name": "That's What She Said Game - Second Expansion",
    "official": false,
    "promptsCount": 30,
    "responsesCount": 70,
  },
  Object {
    "abbr": "25",
    "name": "Not Parent Approved Expansion Pack #1",
    "official": false,
    "promptsCount": 20,
    "responsesCount": 60,
  },
  Object {
    "abbr": "48",
    "name": "Not Parent Approved Expansion Pack #2",
    "official": false,
    "promptsCount": 20,
    "responsesCount": 60,
  },
  Object {
    "abbr": "94",
    "name": "Blurbs Against Buffalo",
    "official": false,
    "promptsCount": 18,
    "responsesCount": 54,
  },
  Object {
    "abbr": "136",
    "name": "That's What She Said Game - First Expansion",
    "official": false,
    "promptsCount": 50,
    "responsesCount": 50,
  },
  Object {
    "abbr": "154",
    "name": "JadedAid: Peace Corps Expansion Pack",
    "official": false,
    "promptsCount": 10,
    "responsesCount": 46,
  },
  Object {
    "abbr": "178",
    "name": "The Catholic Card Game: Life Teen Expansion Pack",
    "official": false,
    "promptsCount": 9,
    "responsesCount": 45,
  },
  Object {
    "abbr": "135",
    "name": "Trumped UpCards: Astonishlingly Excellent Wealthcare! Expansion Pack",
    "official": false,
    "promptsCount": 12,
    "responsesCount": 43,
  },
  Object {
    "abbr": "30",
    "name": "The Catholic Card Game: Generations Expansion Pack",
    "official": false,
    "promptsCount": 12,
    "responsesCount": 42,
  },
  Object {
    "abbr": "147",
    "name": "Trumped UpCards: Alternative Facts Expansion Pack",
    "official": false,
    "promptsCount": 9,
    "responsesCount": 39,
  },
  Object {
    "abbr": "185",
    "name": "Trumped UpCards: Many Sides  Expansion Pack",
    "official": false,
    "promptsCount": 12,
    "responsesCount": 39,
  },
  Object {
    "abbr": "100",
    "name": "Knitters Against Swatches First Edition",
    "official": false,
    "promptsCount": 6,
    "responsesCount": 30,
  },
  Object {
    "abbr": "12",
    "name": "Knitters Against Swatches Second Edition",
    "official": false,
    "promptsCount": 8,
    "responsesCount": 28,
  },
  Object {
    "abbr": "163",
    "name": "Cols Against Kentucky 2",
    "official": false,
    "promptsCount": 9,
    "responsesCount": 27,
  },
  Object {
    "abbr": "70",
    "name": "Voter's Choice: The Fourth Expansion",
    "official": false,
    "promptsCount": 12,
    "responsesCount": 22,
  },
  Object {
    "abbr": "113",
    "name": "Voter's Choice: The Third Expansion",
    "official": false,
    "promptsCount": 11,
    "responsesCount": 22,
  },
  Object {
    "abbr": "102",
    "name": "Voter's Choice: The Second Expansion",
    "official": false,
    "promptsCount": 15,
    "responsesCount": 20,
  },
  Object {
    "abbr": "115",
    "name": "Voter's Choice: The First Expansion",
    "official": false,
    "promptsCount": 8,
    "responsesCount": 20,
  },
  Object {
    "abbr": "199",
    "name": "Cols Despite Kentucky",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 18,
  },
  Object {
    "abbr": "196",
    "name": "Hidden Compartment Pack",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 15,
  },
  Object {
    "abbr": "40",
    "name": "Conspiracy Theory - Kickstarter Bonus Cards Pack",
    "official": false,
    "promptsCount": 4,
    "responsesCount": 11,
  },
  Object {
    "abbr": "203",
    "name": "Pax East 2013 Promo Pack A",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 8,
  },
  Object {
    "abbr": "201",
    "name": "Hanukkah LOL Pack",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 7,
  },
  Object {
    "abbr": "142",
    "name": "Cats Abiding Horribly Bonus Cards 2",
    "official": false,
    "promptsCount": 5,
    "responsesCount": 5,
  },
  Object {
    "abbr": "182",
    "name": "Cats Abiding Horribly Bonus Cards",
    "official": false,
    "promptsCount": 5,
    "responsesCount": 5,
  },
  Object {
    "abbr": "202",
    "name": "Humanity Hates Trump: Kickstarter Promo Cards",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 5,
  },
  Object {
    "abbr": "204",
    "name": "Black Box Press Kit",
    "official": false,
    "promptsCount": 0,
    "responsesCount": 1,
  },
]
`;
